# FontViewer

./: .dir-locals.el  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmake-gen.bat  cmake-gen.py  cmake-gen.sh  main.cpp  make.bat  make.ps1
3rdParties/: CMakeLists.txt
App/: CMakeLists.txt  DeployQtWrapper.sh  main.cpp
App/macOS/: plist.in
App/macOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
App/win32/: Resource.aps
Font/: CMakeLists.txt  FVFace.cpp
FontCore/: CMakeLists.txt  FVFace.h
FontX/: CMakeLists.txt  FX.h  FXBenchmark.h  FXBitmap.cpp  FXBitmap.h  FXBoostPrivate.cpp  FXBoostPrivate.h  FXCMap.cpp  FXCMap.h  FXCache.h  FXFS.cpp  FXFS.h  FXFT.h  FXFTNames.cpp  FXFTNames.h  FXFTPrivate.cpp  FXFTPrivate.h  FXFace.cpp  FXFace.h  FXFaceDatabase.cpp  FXFaceDatabase.h  FXFontFileIterator.cpp  FXFontFileIterator.h  FXGlyph.cpp  FXGlyph.h  FXGlyphCache.cpp  FXGlyphCache.h  FXHBPrivate.cpp  FXHBPrivate.h  FXHelper.h  FXInspector.cpp  FXInspector.h  FXIterator.h  FXLib.cpp  FXLib.h  FXLog.cpp  FXLog.h  FXNamesPrivate.cpp  FXNamesPrivate.h  FXOT.cpp  (+17 more)
FontX/PDF/: CMakeLists.txt  FXPDFDocument.cpp  FXPDFDocument.h  FXPDFFace.cpp  FXPDFFace.h  main.cpp
FontX/PDF/podofo/src/base/: PdfFilter.cpp  PdfFilter.h  PdfMemStream.cpp  PdfStream.cpp  PdfString.cpp
FontX/PDF/podofo/src/doc/: PdfFont.cpp  PdfInfo.h  PdfPainter.cpp
FontX/PDF/podofo/test/CreationTest/: CreationTest.cpp
FontX/PDF/podofo/test/FormTest/: FormTest.cpp
FontX/PDF/podofo/tools/podofocrop/: podofocrop.cpp
FontXCommandLine/: CMakeLists.txt  FCL.cpp  FCL.h  FCLBidi.cpp  FCLDatabase.cpp  FCLDatabase.h  FCLDump.cpp  FCLDumpKern.cpp  FCLDumpTextInShape.cpp  FCLPDump.cpp  FCLPDumpKern.cpp  FCLPlayground.cpp  FCLShaping.cpp  main.cpp
PDFPlugin/: CMakeLists.txt  FXPDF.cpp  PDFDocument.cpp  PDFDocument.h  main.cpp
Qt-Playground/QXCollectionView/: QXCollectionView.h  QXCollectionView.pro  mainwindow.ui
Qt-Playground/QXListViewWithSection/: QXListView.cpp  QXListView.h  QXListViewWithSection.pro  mainwindow.ui
Qt-Playground/QXThemedWindow/: QXThemedWindow.h  QXThemedWindow.pro  main.cpp  mainwindow.cpp  mainwindow.h
Resources/: BidiLineBreakAlgorithms.txt  ShapingSamples.txt  shaping-samples.txt
Resources/Html/: FontInfoTemplate.html  GlyphInfoTemplate.html  template.html
Resources/Html/Font/: General.html  general.html
Resources/Images/: app.psd  arrow-down.ai  arrow-right.ai  close.ai  cmap.ai  font-book.ai  font-copy.ai  font-list.ai  font-window.ai  glyph.ai  history.ai  info.psd  menu.ai  ok.ai  open-folder.ai  open-font.ai  opentype.ai  pdf.ai  plus.ai  postscript.ai  preview.ai  splash-text.psd  splash.ai  truetype.ai  variant.ai  windowsfnt.psd
Resources/PDFs/: KFKTRH+MyriadPro-Regular-0015.cff
UI-Qt/: CMakeLists.txt  MacApplicationDelegate.h  MacApplicationDelegate.mm  MacHelper.h  MacHelper.mm  MacInfo.plist  MacMain.mm  MacQUDocumentWindowManager.mm  QUAboutDialog.cpp  QUAboutDialog.h  QUAboutDialog.ui  QUApp.cpp  QUApp.h  QUApp.pro  QUApplication.cpp  QUApplication.h  QUApplication.qrc  QUCMapBlockWidget.cpp  QUCMapBlockWidget.h  QUCMapBlockWidget.ui  QUCMapBlockWindow.cpp  QUCMapBlockWindow.h  QUCMapBlockWindow.ui  QUConv.cpp  QUConv.h  QUDockTitleBarWidget.cpp  QUDockTitleBarWidget.h  QUDocument.cpp  QUDocument.h  QUDocumentWindow.cpp  QUDocumentWindow.h  QUDocumentWindow.ui  QUDocumentWindowManager.cpp  QUDocumentWindowManager.h  QUEncoding.cpp  QUEncoding.h  QUFontComboBox.cpp  QUFontComboBox.h  QUFontInfoWidget.cpp  QUFontInfoWidget.h  (+207 more)
UI-Qt/qdarkstyle/: LICENSE  style.qrc  style.qss
UI-QtQuick/: CMakeLists.txt  main.cpp
cmake/: CopyUCD.cmake  FindHarfBuzz.cmake  FindMuPDF.cmake  FindPoDoFo.cmake  Findcereal.cmake  Findfribidi.cmake  Resources.cmake  bootstrap.cmake
